--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="/images/image-omelette.jpeg" alt="" />
+      <img src="/image-omelette.jpeg" alt="" />
       <h1>Simple Omelette Recipe</h1>
       <p class="discreption">
         An easy and quick dish, perfect for any meal. This classic omelette
